Fix chatterbox  overflow scroll

--- a/public/chatterbox/chatterbox.css
+++ b/public/chatterbox/chatterbox.css
@@ -1,6 +1,6 @@
 .calcApp-chatterbox {
-    
-    /* get this to scroll */
+    /* need height for overflow scroll */
+    height: 80vh;
     overflow-y: scroll;
 }
 
